Fix T53247: mixed CPU + GPU render wrong texture limits.